=======
CHANGES
=======

------
0.12.3
------

Fixes to read_excel

------
0.12.2
------

Added editable parameter to Table
Added enable_menus parameter
Option to import numbers as string
Changed to pickle for dataexplore project files
Fixes to syncing of rowcolors

------
0.12.1
------

Fix to mlab griddata bug
Changed griddata to use scipy (but not a dependency)
Added col header color preference

------
0.12.0
------

Fixes to clean data
Convert currencies to numeric
Column widths now saved in dataexplore
Fix to string query to allow python code
New preferences system uses a text config file
Violinplot
Datetime conversion fixes
Batch process plugin

------
0.11.0
------

Added find/replace dialog
Moved redundant options from 3D panel
Can now plot 3D using check button
Grouped scatter plots in 3D
Removed redundant data in saving of plot options in projects
Recent project items in menu
Dropdown entry menu for categorical columns
Crosstab function
Radviz plot
Improved multi-index column display

------
0.10.0
------

Fix to dropping index when no name
Added dotplot
Added axis tick and tick label format options
Added plotting animation dialog
Added ability to label points in scatter plots using a column
Added ability to set point sizes with data column
Fix to plot frame closing bug
Added empty column selection for groupby option
Fixes to copy/paste and saving projects in snap
Long column names now wrapped in plots
Can now wrap column header text
Fix to column resizing

------
0.9.0
------

Row/col options for sample data
Fixed scrolling up/down and right/left for arrow keys
Re-did aggregate dialog to be more general
Resample/transform functions for columns
Added find duplicates dialog
Zoom in/out functions to view menu
Improved grid layout dialog
Ability to auto create multiviews/split data in grid
Removed TkAgg toolbar (deprecated)
Fixed bug for slow row selection in large tables
Fixed slow loading of large tables

------
0.8.3
------

Index header fixes